pilot/pkg/serviceregistry/kube/controller/ambient/testdata/allow-groups.yaml
groups:
  - rules:
      - matches:
          - destinationPorts:
              - 80
      - matches:
          - namespaces:
              - exact: only-l4-ns
            principals:
              - exact: only-l4-principals
  - rules:
      - matches:
          - namespaces:
              - exact: when-l4-ns
      - matches:
          - sourceIps:
              - address: CgoKCg==
                length: 32
name: groups
scope: NAMESPACE
