pilot/pkg/serviceregistry/kube/controller/ambient/testdata/deny-groups.yaml
action: DENY
groups:
  - rules:
      - matches:
          - destinationPorts:
              - 80
      - matches:
          - namespaces:
              - exact: from-mix-ns
            principals:
              - exact: from-mix-principal
  - rules:
      - matches:
          - destinationPorts:
              - 80
      - matches:
          - namespaces:
              - exact: to-mix-ns
            principals:
              - exact: to-mix-principal
  - rules:
      - matches:
          - destinationPorts:
              - 80
      - matches:
          - namespaces:
              - exact: only-l4-ns
            principals:
              - exact: only-l4-principals
  - rules:
      - matches:
          - { }
      - matches:
          - { }
  - rules:
      - matches:
          - namespaces:
              - exact: when-l4-l7-ns
      - matches:
          - { }
  - rules:
      - matches:
          - namespaces:
              - exact: when-l4-ns
      - matches:
          - notSourceIps:
              - address: FBQUFA==
                length: 32
            sourceIps:
              - address: CgoKCg==
                length: 32
  - rules:
      - matches:
          - { }
      - matches:
          - { }
name: groups-deny
scope: NAMESPACE
