pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-disable-in.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: disable-mtls
spec:
  mtls:
    mode: DISABLE
