pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-disable-port-mtls-strict.yaml
action: DENY
groups:
  - rules:
      - matches:
          - destinationPorts:
              - 9090
            notPrincipals:
              - presence: { }
name: converted_peer_authentication_disable-strict-mtls
scope: WORKLOAD_SELECTOR
