pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-permissive-port-mtls-strict-and-permissive.yaml
action: DENY
groups:
  - rules:
      - matches:
          - destinationPorts:
              - 9090
            notPrincipals:
              - presence: { }
name: converted_peer_authentication_permissive-strict-mtls
scope: WORKLOAD_SELECTOR
