pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-permissive-port-mtls-strict-in.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: permissive-strict-mtls
spec:
  selector:
    matchLabels:
      app: a
  mtls:
    mode: PERMISSIVE
  portLevelMtls:
    9090:
      mode: STRICT
