pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-permissive-root-unset-namespace-mixed-workload-ports.yaml
action: DENY
groups:
  - rules:
      - matches:
          - destinationPorts:
              - 9090
            notPrincipals:
              - presence: { }
name: converted_peer_authentication_workload
namespace: foo
scope: WORKLOAD_SELECTOR
