pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-strict-and-permissive-port-mtls-in.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict-and-permissive-mtls
spec:
  selector:
    matchLabels:
      app: a
  mtls:
    mode: STRICT
  portLevelMtls:
    9090:
      mode: PERMISSIVE
