pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-strict-port-mtls-strict-and-permissive.yaml
action: DENY
groups:
  - rules:
      - matches:
          - notPrincipals:
              - presence: { }
      - matches:
          - notDestinationPorts:
              - 8080
name: converted_peer_authentication_permissive-strict-mtls
scope: WORKLOAD_SELECTOR
