pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-unset-port-mtls-strict-in.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict-mtls
spec:
  selector:
    matchLabels:
      app: a
  mtls:
    mode: UNSET
  portLevelMtls:
    8080:
      mode: STRICT
