pilot/pkg/serviceregistry/kube/controller/ambient/testdata/peer-authn-unset-port-mtls-strict.yaml
action: DENY
groups:
  - rules:
      - matches:
          - destinationPorts:
              - 8080
            notPrincipals:
              - presence: { }
name: converted_peer_authentication_strict-mtls
scope: WORKLOAD_SELECTOR
